<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel Tracker</string>
    <string name="action_new">New</string>
    <string name="action_settings">Settings</string>
    <string name="action_cleardb">Clear DB</string>
    <string name="title_fills">Fills</string>
    <string name="title_monthly">Monthly</string>
    <string name="title_stats">Stats</string>
    <string name="title_activity_fill">New Fill</string>
    <string name="odometer">Odometer</string>
    <string name="trip">Trip</string>
    <string name="volume">Volume</string>
    <string name="full_tank">Full tank</string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="action_done">Done</string>
    <string name="cleardb_title">Erase ALL fills ?</string>
    <string name="cleardb_msg">You\'ll lose all recorded fills !</string>
    <string name="cleardb_ok">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Remove</string>

</resources>
